--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "mongoose": "^6.9.1"
   }
