--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0"
