--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "joi": "^17.7.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0"
